<resources>
    <string name="app_name">About_Me</string>
    <string name="name">Name</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio_text">
    \n\nThe "Extract dimension resource" menu option is not available for this attribute,
    so you will have to add it to dimens.xml by hand.
    \n\nIf you want to start at this step, you can download this exercise code from: Step.03-Exercise-Add-ScrollView.
    \n\nYou will find plenty of //TODO comments to help you complete this exercise,
        and if you get stuck, go back and watch the video again.
    \n\nThe "Extract dimension resource" menu option is not available for this attribute,
    so you will have to add it to dimens.xml by hand.
    \n\nIf you want to start at this step, you can download this exercise code from: Step.03-Exercise-Add-ScrollView.
    \n\nYou will find plenty of //TODO comments to help you complete this exercise,
        and if you get stuck, go back and watch the video again.</string>
    <string name="nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>
